@@ -3,10 +3,12 @@ Release history for Dist-Zilla-Plugin-Git-NextRelease
 {{$NEXT}}
  [00 Minor]
  - Tests refactored
+ - Add dump_config
 
  [Dependencies::Stats]
  - Dependencies changed since 0.002012, see misc/*.deps* for details
  - develop: +1 ↑1 (suggests: ↑2)
+ - runtime: +1
  - test: +1 -4
 
  [Tests]
